# tree-sitter-webidl

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  bun.lockb  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tree_sitter_webidl/: __init__.py
src/: grammar.json  node-types.json  parser.c
